--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             >
           </p>
 
-          <form class="feedback-form" action="#" method="post">
+          <form class="feedback-form" action="submit_comment.php" method="post">
             <label for="comments">Any comments about the page:</label>
             <textarea
               id="comments"
