--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arab's Profile</title>
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
-      <h1>Arab's Profile</h1>
-
+      <h1>
+        <a href="index.html" class="profile-link"> Arab's Profile </a>
+      </h1>
       <article>
         <header class="profile-header">
           <div class="university-info">
@@ -36,8 +37,8 @@
         </nav>
         <hr />
 
-        <section class="profile-section">
-          <h2 id="about-me">About Me</h2>
+        <section class="profile-section" id="about-me">
+          <h2>About Me</h2>
           <div class="image-skills">
             <img src="profile.jpg" alt="Arab's Personal Photo" />
             <div class="skills">
@@ -63,9 +64,12 @@
               completed two academic years successfully.
             </p>
           </div>
+        </section>
+
+        <section name="experience" id="experience">
           <hr />
           <div class="about-text">
-            <h2 id="experience">My Experience</h2>
+            <h2>My Experience</h2>
             <h3>How I Can Benefit Companies with My Skills:</h3>
             <p>
               With a solid foundation in multiple programming languages and
@@ -81,9 +85,12 @@
               seeking reliable and innovative software engineering talent.
             </p>
           </div>
+        </section>
+
+        <section name="certificates" id="certificates">
           <hr />
           <div class="about-text">
-            <h2 id="certificates">Certificates</h2>
+            <h2>Certificates</h2>
             <h3>About Jordan University of Science and Technology (JUST):</h3>
             <p>
               Jordan University of Science and Technology (JUST) is one of the
@@ -101,11 +108,10 @@
               challenges with confidence and creativity.
             </p>
           </div>
-          <hr />
         </section>
 
-        <section class="contact-section">
-          <h2 id="contact">Contact Me</h2>
+        <section class="contact-section" id="contact">
+          <h2>Contact Me</h2>
           <p>
             To send an email:
             <a href="mailto:arab.samer.1121@gmail.com" class="email-link"
@@ -131,7 +137,7 @@
 
         <footer class="site-footer">
           <div class="footer-top">
-            <a href="#" class="footer-brand">Arab's Profile</a>
+            <a href="index.html" class="footer-brand">Arab's Profile</a>
 
             <div class="footer-sections">
               <!-- Useful Links -->
