--- a/index.html
+++ b/index.html
@@ -110,6 +110,55 @@
           </div>
         </section>
 
+        <section id="teachers-opinion" class="teachers-section">
+          <hr />
+          <h2>What Teachers Say About Me</h2>
+          <div class="teacher-cards">
+            <div class="teacher-card">
+              <img
+                src="Dr.Mohammad.jpg"
+                alt="Dr.Mohammad Banat"
+                class="teacher-img"
+              />
+              <h3>Dr.Mohammad Banat</h3>
+              <p>
+                "My brother Arab, I thank you for your kind nature and I ask God
+                Almighty to protect you, grant you success, and benefit from you
+                and your knowledge. May you have a happy new year and may God
+                accept your good deeds."
+              </p>
+            </div>
+
+            <div class="teacher-card">
+              <img
+                src="Dr.luay.jpg"
+                alt="Dr.Lu'ay Alawneh"
+                class="teacher-img"
+              />
+              <h3>Dr.Lu'ay Alawneh</h3>
+              <p>
+                "All my best wishes to you, Arab, an example of politeness in
+                lectures."
+              </p>
+            </div>
+
+            <div class="teacher-card">
+              <img
+                src="Dr.suzan.jpg"
+                alt="Dr.Suzan Bdour"
+                class="teacher-img"
+              />
+              <h3>Dr.Suzan Bdour</h3>
+              <p>
+                " Thank you very much, Arab, for your kind manners. I wish you
+                success in your university studies and achieve the highest
+                grades. I ask God to grant you success in your future
+                professional and practical life."
+              </p>
+            </div>
+          </div>
+        </section>
+
         <section class="contact-section" id="contact">
           <h2>Contact Me</h2>
           <p>
