--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio of Arab Mustafa, Computer Engineering student at JUST with skills in Java, C++, and web development.">
+    <meta name="keywords" content="Arab, Computer Engineering, JUST, Java, Web, Portfolio, Jordan">
     <title>Arab's Profile</title>
     <link rel="stylesheet" href="Style.css" />
   </head>
