--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio of Arab Mustafa, Computer Engineering student at JUST with skills in Java, C++, and web development.">
-    <meta name="keywords" content="Arab, Computer Engineering, JUST, Java, Web, Portfolio, Jordan">
     <title>Arab's Profile</title>
     <link rel="stylesheet" href="Style.css" />
+    <link rel="shortcut icon" type="image" href="profile.jpg" />
+    <script src="Javascript.js" defer></script>
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+      defer
+    ></script>
   </head>
   <body>
     <main>
+      <!-- زر الترجمة يظهر أعلى يمين الصفحة -->
+      <div id="google_translate_element"></div>
       <h1>
         <a href="index.html" class="profile-link"> Arab's Profile </a>
       </h1>
@@ -38,7 +45,6 @@
           </ul>
         </nav>
         <hr />
-
         <section class="profile-section" id="about-me">
           <h2>About Me</h2>
           <div class="image-skills">
@@ -67,9 +73,8 @@
             </p>
           </div>
         </section>
-
+        <hr />
         <section name="experience" id="experience">
-          <hr />
           <div class="about-text">
             <h2>My Experience</h2>
             <h3>How I Can Benefit Companies with My Skills:</h3>
@@ -88,9 +93,8 @@
             </p>
           </div>
         </section>
-
+        <hr />
         <section name="certificates" id="certificates">
-          <hr />
           <div class="about-text">
             <h2>Certificates</h2>
             <h3>About Jordan University of Science and Technology (JUST):</h3>
@@ -111,9 +115,8 @@
             </p>
           </div>
         </section>
-
+        <hr />
         <section id="teachers-opinion" class="teachers-section">
-          <hr />
           <h2>What Teachers Say About Me</h2>
           <div class="teacher-cards">
             <div class="teacher-card">
@@ -206,18 +209,22 @@
                 <h3>Social Media</h3>
                 <ul class="social-links">
                   <li>
-                    <a href="https://www.facebook.com/" target="_blank"
+                    <a
+                      href="https://web.facebook.com/arabs.abusalameh"
+                      target="_blank"
                       ><img src="facebook.svg" alt="Facebook logo" />
                       Facebook</a
                     >
                   </li>
                   <li>
-                    <a href="https://www.twitter.com/" target="_blank"
+                    <a href="https://x.com/ArabAbuSalameh" target="_blank"
                       ><img src="twitter.jpg" alt="Twitter logo" /> Twitter</a
                     >
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/" target="_blank"
+                    <a
+                      href="https://www.linkedin.com/in/arab-abusalameh-b46473321/"
+                      target="_blank"
                       ><img src="linkedin.png" alt="LinkedIn logo" />
                       LinkedIn</a
                     >
