--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arab's Profile</title>
     <link rel="stylesheet" href="Style.css" />
-    <link rel="shortcut icon" type="image" href="profile.jpg" />
+    <link rel="shortcut icon" type="image" href="img/profile.jpg" />
     <script src="Javascript.js" defer></script>
     <script
       type="text/javascript"
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main>
-      <!-- زر الترجمة يظهر أعلى يمين الصفحة -->
+      <!-- Translate Buttom -->
       <div id="google_translate_element"></div>
       <h1>
         <a href="index.html" class="profile-link"> Arab's Profile </a>
@@ -23,7 +23,7 @@
       <article>
         <header class="profile-header">
           <div class="university-info">
-            <img src="JUST.png" alt="JUST Logo" />
+            <img src="img/JUST.png" alt="JUST Logo" />
             <p>
               Jordan University of Science and Technology — Computer Engineering
               (CPE)
@@ -48,7 +48,7 @@
         <section class="profile-section" id="about-me">
           <h2>About Me</h2>
           <div class="image-skills">
-            <img src="profile.jpg" alt="Arab's Personal Photo" />
+            <img src="img/profile.jpg" alt="Arab's Personal Photo" />
             <div class="skills">
               <h3>Programming Skills:</h3>
               <ul>
@@ -114,6 +114,11 @@
               challenges with confidence and creativity.
             </p>
           </div>
+          <div style="text-align: center; margin: 20px 0">
+            <a href="certificates.html" class="view-cert-button"
+              >View My Certificates</a
+            >
+          </div>
         </section>
         <hr />
         <section id="teachers-opinion" class="teachers-section">
@@ -121,7 +126,7 @@
           <div class="teacher-cards">
             <div class="teacher-card">
               <img
-                src="Dr.Mohammad.jpg"
+                src="img/Dr.Mohammad.jpg"
                 alt="Dr.Mohammad Banat"
                 class="teacher-img"
               />
@@ -136,7 +141,7 @@
 
             <div class="teacher-card">
               <img
-                src="Dr.luay.jpg"
+                src="img/Dr.luay.jpg"
                 alt="Dr.Lu'ay Alawneh"
                 class="teacher-img"
               />
@@ -149,7 +154,7 @@
 
             <div class="teacher-card">
               <img
-                src="Dr.suzan.jpg"
+                src="img/Dr.suzan.jpg"
                 alt="Dr.Suzan Bdour"
                 class="teacher-img"
               />
@@ -212,20 +217,33 @@
                     <a
                       href="https://web.facebook.com/arabs.abusalameh"
                       target="_blank"
-                      ><img src="facebook.svg" alt="Facebook logo" />
+                      ><img
+                        src="img/facebook.svg"
+                        class="social-links"
+                        alt="Facebook logo"
+                      />
                       Facebook</a
                     >
                   </li>
                   <li>
                     <a href="https://x.com/ArabAbuSalameh" target="_blank"
-                      ><img src="twitter.jpg" alt="Twitter logo" /> Twitter</a
+                      ><img
+                        src="img/twitter.jpg"
+                        class="social-links"
+                        alt="Twitter logo"
+                      />
+                      Twitter</a
                     >
                   </li>
                   <li>
                     <a
                       href="https://www.linkedin.com/in/arab-abusalameh-b46473321/"
                       target="_blank"
-                      ><img src="linkedin.png" alt="LinkedIn logo" />
+                      ><img
+                        src="img/linkedin.png"
+                        class="social-links"
+                        alt="LinkedIn logo"
+                      />
                       LinkedIn</a
                     >
                   </li>
