--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <a href="tel:+962782768784">📞 +962 7 8276 8784</a>
             <span>|</span>
             <a href="mailto:arab.samer.1121@gmail.com"
-              >📧 arab.samer.1121@gmail.com.com</a
+              >📧 arab.samer.1121@gmail.com</a
             >
           </div>
           &copy; 2025 Arab. All rights reserved.
