--- a/certificates.html
+++ b/certificates.html
@@ -8,11 +8,22 @@
   </head>
   <body>
     <main>
-      <h1>My Certificates</h1>
+      <header>
+        <h1>My Certificates</h1>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#networking">Networking</a></li>
+            <li><a href="#excellence">Excellence</a></li>
+            <li><a href="#entrepreneurship">Entrepreneurship</a></li>
+            <li><a href="#python">Python</a></li>
+            <li><a href="#iot">IoT</a></li>
+          </ul>
+        </nav>
+      </header>
 
       <section class="certificates-gallery">
         <!--Networking Academy Learn-A-Thon 2025-->
-        <h2>Networking Academy Learn-A-Thon 2025</h2>
+        <h2 id="networking">Networking Academy Learn-A-Thon 2025</h2>
         <img src="img/2025.png" style="width: 600px" alt="Certificate 1" />
         <div
           data-iframe-width="150"
@@ -30,7 +41,7 @@
           a Learn-A-Thon event organized by a local Networking Academy.
         </p>
 
-        <h2>Recognition of his academic excellence.</h2>
+        <h2 id="excellence">Recognition of his academic excellence.</h2>
         <img src="img/A.jpg" alt="Certificate 2" />
         <p>
           An official letter from the Admissions and Registration Unit at the
@@ -42,7 +53,7 @@
           encourages him to continue to excel and succeed in his academic and
           professional career.
         </p>
-        <h2>Discovering Entrepreneurship</h2>
+        <h2 id="entrepreneurship">Discovering Entrepreneurship</h2>
         <div>
           <img
             src="img/Discovering2.png"
@@ -70,7 +81,7 @@
           to succeed as a small business owner, franchisee, founder, or other
           entrepreneurial professional.
         </p>
-        <h2>Python Essentials</h2>
+        <h2 id="python">Python Essentials</h2>
         <div>
           <img src="img/Pyton.png" style="width: 600px" alt="Certificate 5" />
           <div
@@ -95,7 +106,7 @@
           the Python language and resolve implementation challenges using the
           Python Standard Library.
         </p>
-        <h2>Introduction to IoT</h2>
+        <h2 id="iot">Introduction to IoT</h2>
         <div>
           <img src="img/IOT.png" style="width: 600px" alt="Certificate 6" />
           <div
