--- a/certificates.html
+++ b/certificates.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Certificates</title>
     <link rel="stylesheet" href="Style.css" />
+        <link rel="shortcut icon" type="image" href="img/profile.jpg" />
+    <script src="Javascript.js" defer></script>
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+      defer
+    ></script>
   </head>
   <body>
     <main>
+      <div id="google_translate_element"></div>
       <header>
         <h1>My Certificates</h1>
         <nav class="navbar">
