--- a/index.html
+++ b/index.html
@@ -124,12 +124,14 @@
         <section id="teachers-opinion" class="teachers-section">
           <h2>What Teachers Say About Me</h2>
           <div class="teacher-cards">
+            <a href="https://www.just.edu.jo/~banat/">
             <div class="teacher-card">
               <img
                 src="img/Dr.Mohammad.jpg"
                 alt="Dr.Mohammad Banat"
                 class="teacher-img"
               />
+              </a>
               <h3>Dr.Mohammad Banat</h3>
               <p>
                 "My brother Arab, I thank you for your kind nature and I ask God
@@ -140,12 +142,14 @@
             </div>
 
             <div class="teacher-card">
+              <a href="https://www.just.edu.jo/~lmalawneh/">
               <img
                 src="img/Dr.luay.jpg"
                 alt="Dr.Lu'ay Alawneh"
                 class="teacher-img"
-              />
+              /></a>
               <h3>Dr.Lu'ay Alawneh</h3>
+            
               <p>
                 "All my best wishes to you, Arab, an example of politeness in
                 lectures."
@@ -153,11 +157,12 @@
             </div>
 
             <div class="teacher-card">
+              <a href="https://www.just.edu.jo/ar/eportfolio/Pages/default.aspx?email=bsuzan">
               <img
                 src="img/Dr.suzan.jpg"
                 alt="Dr.Suzan Bdour"
                 class="teacher-img"
-              />
+              /></a>
               <h3>Dr.Suzan Bdour</h3>
               <p>
                 " Thank you very much, Arab, for your kind manners. I wish you
@@ -256,7 +261,7 @@
             <a href="tel:+962782768784">📞 +962 7 8276 8784</a>
             <span>|</span>
             <a href="mailto:arab.samer.1121@gmail.com"
-              >📧 arab.samer.1121@gmail.com</a
+              >📧 arab.samer.1121@gmail.com.com</a
             >
           </div>
           &copy; 2025 Arab. All rights reserved.
